feat: style button component and enhance documentation UI

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@babel/traverse": "^7.26.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.3",
+    "@types/prismjs": "^1.26.5",
     "@types/react-dom": "^19.0.2",
     "cra-template-typescript": "1.2.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
